@@ -1,0 +1,18 @@
+
+package Paws::DS::AddIpRoutesResult;
+  use Moose;
+
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::DS::AddIpRoutesResult
+
+=head1 ATTRIBUTES
+
+
+
+=cut
+
+1;
